import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation

plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    jcenter()
    
    maven {
        name "m2-dv8tion"
        url "https://m2.dv8tion.net/releases"
    }
    
    maven { 
        url "https://jitpack.io"
    }
    
    maven { 
        url "https://m2.duncte123.dev/releases"
    }
}

dependencies {
    testImplementation group: "junit", name: "junit", version: "4.13.2"
    
    implementation group: "com.google.guava", name: "guava", version: "31.1-jre"
    implementation group: "com.google.code.gson", name: "gson", version: "2.9.1"
    implementation group: "org.reflections", name: "reflections", version: "0.10.2"
    
    implementation group: "commons-io", name: "commons-io", version: "2.11.0"
    implementation group: "org.apache.commons", name: "commons-lang3", version: "3.12.0"
    implementation group: "org.apache.commons", name: "commons-text", version: "1.10.0"
    implementation group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
    implementation group: "commons-validator", name: "commons-validator", version: "1.7"
    
    implementation group: "org.eclipse.mylyn.github", name: "org.eclipse.egit.github.core", version: "3.4.0.201406110918-r"
    
    implementation group: "org.mongodb", name: "mongodb-driver-sync", version: "4.7.2"
    implementation group: "org.mongodb.morphia", name: "morphia", version: "1.3.2"
    implementation group: "io.github.cdimascio", name: "dotenv-java", version: "2.2.4"
    implementation group: "org.spongepowered", name: "configurate-hocon", version: "4.1.2"
    
    implementation group: "ch.qos.logback", name: "logback-classic", version: "1.4.4"
    
    implementation group: "com.vdurmont", name: "emoji-java", version: "5.1.1"
    implementation group: "net.dean.jraw", name: "JRAW", version: "1.1.0"
    implementation group: "org.jsoup", name: "jsoup", version: "1.15.2"
    implementation group: "com.github.LowLevelSubmarine", name: "GeniusLyricsAPI", version: "1.0.3"
    implementation group: "com.github.jan-tennert", name: "R6StatsJava", version: "1.3.4"
    
    implementation group: "org.jfree", name: "jfreechart", version: "1.5.3"
    implementation group: "com.jhlabs", name: "filters", version: "2.0.235-1"
    implementation group: "com.object-refinery", name: "orsoncharts", version: "1.7" 
    
    implementation group: "org.graalvm.js", name: "js", version: "22.2.0.1"
    implementation group: "com.codepoetics", name: "ambivalence", version: "0.2"
    
    implementation group: "net.dv8tion", name: "JDA", version: "5.0.0-alpha.21"
    implementation group: "com.github.walkyst", name: "lavaplayer-fork", version: "1.3.98.4"
    implementation group: "com.github.natanbc", name: "lavadsp", version: "0.7.7"
    implementation group: "com.dunctebot", name: "sourcemanagers", version: "1.8.1"
    implementation group: "com.github.Topis-Lavalink-Plugins", name: "Topis-Source-Managers", version: "3.0.4"
    
    implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.12.0'
    implementation group: 'com.github.philippheuer.events4j', name: 'events4j-handler-reactor', version: '0.11.0'
    implementation group: 'com.lukaspradel', name: 'steam-web-api', version: '1.4'
}

application {
    mainClass = "io.github.darealturtywurty.superturtybot.TurtyBot"
}

jar {
    manifest {
        attributes(
            "Implementation-Title": "SuperTurtyBot",
            "Implementation-Version": "1.0-alpha",
            "Main-Class": "io.github.darealturtywurty.superturtybot.TurtyBot"
        )
    }
}

shadowJar {
    dependencies {
        exclude(dependency("junit:junit:4.13.2"))
    }
    
    mergeServiceFiles()
}

compileJava.options.encoding = "UTF-8"

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
